# company-research-agent

./: Dockerfile  Procfile  README.es.md  README.fr.md  README.md  README.zh.md  application.py  main.py  pyproject.toml  setup.sh  start.sh
.ebextensions/: nginx.config
.elasticbeanstalk/: config.yml
backend/: graph.py
backend/classes/: state.py
backend/nodes/: briefing.py  editor.py  grounding.py
backend/nodes/researchers/: base.py
backend/utils/: auth.py
error/: error
ui/src/: App.tsx
ui/src/components/: Header.tsx  ResearchForm.tsx  ResearchQueries.tsx
ui/src/services/: auth.ts
ui/src/utils/: translations.ts
